bugfix: fix inability to tap on key when touch overlaps unselectable text

--- a/projects/drumkit/drumkit.css
+++ b/projects/drumkit/drumkit.css
@@ -48,6 +48,19 @@
   min-width: 72px;
   transition: all .07s ease;
   touch-action: manipulation;
+  position: relative;
+}
+
+.key::after {
+  content: "";
+  background-color: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 2;
+  border-radius: 5px;
 }
 
 .key__id {
